# RoadUp

./: .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  CODE_REFERENCE.md  README.md  STATUS.md  config.example.yaml  conftest.py  pyproject.toml
.claude/: settings.json
.claude/skills/blender-mesh-accel/: SKILL.md
.claude/skills/kit-app-tooling/: SKILL.md
.claude/skills/opendrive-core/: SKILL.md
.claude/skills/road-design-standards/: SKILL.md  cheatsheet.md
.claude/skills/usd-viewport/: SKILL.md
examples/: __init__.py  generate_obj_meshes.py  generate_usd.py  generate_xodr_samples.py  showcase.py
presets/: README.md  markings.yaml  road_types.yaml
roadup/: __init__.py
roadup/blender/: __init__.py  _bpy_worker.py  blender_processor.py  processor.py
roadup/blender/tests/: test_processor.py
roadup/common/: __init__.py  config.py  errors.py  ids.py  types.py  units.py
roadup/common/tests/: test_config.py  test_errors.py  test_ids.py  test_types.py  test_units.py
roadup/geometry/: __init__.py  mesh.py  offset.py  sampling.py  splines.py  triangulate.py
roadup/geometry/tests/: test_mesh.py  test_offset.py  test_sampling.py  test_splines.py  test_triangulate.py
roadup/intersections/: __init__.py  boundary.py  connection_spline.py  connectivity.py  junction_builder.py  surface.py
roadup/intersections/tests/: test_connection_spline.py  test_connectivity.py  test_junction_builder.py  test_surface.py
roadup/markings/: __init__.py  material.py  presets.py  roadmark.py
roadup/markings/tests/: test_material.py  test_presets.py  test_roadmark.py
roadup/network/: __init__.py  graph.py  linkage.py  snapping.py  spatial.py
roadup/network/tests/: test_graph.py  test_linkage.py  test_snapping.py  test_spatial.py
roadup/opendrive/: __init__.py
roadup/opendrive/eval/: sampler.py  (+3 more)
roadup/segments/: __init__.py  builder.py  lane_width.py  presets.py  vertical_profile.py
roadup/tooling/: __init__.py  commands.py  controller.py  hover.py  manipulators.py  preview.py
roadup/usd/: __init__.py  mapping.py  materials.py  stage.py
tests/fixtures/: README.md
tests/integration/: test_intersection_editing.py  test_mesh_export.py  test_segment_creation.py  test_usd_generation.py  test_xodr_roundtrip.py  test_xodr_showcase.py  test_xodr_write.py
tools/: gen_pxr_stubs.py
(+35 files in other folders)
